<resources>
    <string name="app_name">Blood Care</string>

    <string name="NotificationId">RequestNotificationId</string>

    <string name="facebook_app_id">392347138243105</string>
    <string name="fb_login_protocol_scheme">fb392347138243105</string>


    <string name="request_blood_text">Request Blood</string>
    <string name="find_nearest_blood_center_text">Find Nearest Blood Center</string>
    <string name="find_nearest_doctor_text">Find Nearest Doctor</string>
    <string name="log_in_button">Log In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="create_user_button">Create User</string>
    <string name="confirm_blood_text">Confirm Blood</string>
    <string name="confirm_location_text">Confirm Location</string>
    <string name="complete_request_text">Complete Request</string>
    <string name="blood_donate_text">Blood Donated</string>
    <string name="about_yourself_text">Tell us about yourself</string>
    <string name="done_button_text">Done</string>
    <string name="dont_have_account_text">Don\'t have an account?</string>
    <string name="accepted_donor_text">Accepted Donors</string>
    <string name="nearby_donor_text">Nearby Donors</string>
    <string name="donor_text">Donor</string>
    <string name="donors_found_text">Donors Found</string>
    <string name="who_donated_blood_text">Who donated the blood ?</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>

    <string name="dialog_title_error">Error</string>
    <string name="dialog_title_information">Information</string>
    <string name="error_occurred">An error occurred.</string>
    <string name="dialog_button_ok">OK</string>
    <string name="user_create_update_error">User create/update failed</string>

    <string name="dialog_title_wait">Please wait&#8230;</string>
    <string name="dialog_message_create_user">Creating user</string>
    <string name="dialog_message_update_user">Updating user</string>
    <string name="dialog_message_verify_user">Signing user</string>
    <string name="dialog_message_sending_email">Sending email</string>
    <string name="dialog_message_searching_donors">Searching Donors</string>
    <string name="dialog_message_fetching_requester_data">Fetching Requester Data</string>
    <string name="dialog_message_fetching_request_history">Fetching Request History</string>
    <string name="dialog_message_fetching_donors">Fetching Donors</string>
    <string name="dialog_message_completing_request">Completing request</string>
    <string name="dialog_message_fetching_donate_history">Fetching Donate History</string>
    <string name="dialog_message_finding_nearby_donors">Finding Nearby Donors</string>
    <string name="dialog_message_request_canceled">Request is canceled</string>
    <string name="dialog_message_finding_nearby_doctors">Finding Nearby Doctors</string>
    <string name="dialog_message_finding_nearby_hospitals">Finding Nearby %1$s</string>
    <string name="dialog_message_registered_as_a_donor">Updating User</string>
    <string name="dialog_message_no_nearby_doctor_found">No Nearby Doctor Found</string>
    <string name="dialog_message_no_nearby_hospital_found">No Nearby Hospital Found</string>
    <string name="dialog_message_loading">Loading</string>
    <string name="dialog_message_no_request_history">You have no blood requests</string>
    <string name="dialog_message_no_donate_history">You haven\'t donated the blood yet.</string>
    <string name="dialog_message_email_successfully_send">Email send to reset your password.</string>
    <string name="dialog_message_select_donor">Please select all the donors.</string>

    <string name="error_no_internet">Connection to the internet failed. Check your internet connection.</string>

    <string name="menu_item_profile">Profile</string>
    <string name="menu_item_history">History</string>
    <string name="menu_item_blood_donors">Search Blood Donors</string>
    <string name="menu_item_hospitals">Search Hospitals</string>
    <string name="menu_item_doctors">Search Doctors</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_item_setting">Setting</string>
    <string name="menu_item_log_out">Log Out</string>
    <string name="cancel_text">CANCEL</string>
    <string name="call_text">Call</string>
    <string name="message_text">Message</string>

    <string name="can_not_empty">field can not be empty.</string>
    <string name="not_less_then">can not be less then %1$d characters.</string>
    <string name="not_valid">field is not valid.</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="request_accept_text">Accept</string>
    <string name="request_reject_text">Reject</string>

    <string name="sign_out_successful">Sign out successfully completed.</string>
    <string name="no_donor_available">Sorry! No Donor is available at the moment.</string>

    <string name="sms_body_text">Hi, Blood Required.</string>

    <string name="email_text">Email</string>
    <string name="email_hint">Email</string>
    <string name="password_text">Password</string>
    <string name="password_hint">Password</string>
    <string name="retype_password_hint">Retype password</string>
    <string name="name_hint">Name</string>
    <string name="age_hint">Age</string>
    <string name="do_not_match"> %1$s and %2$s do not match.</string>
    <string name="requesting_blood_type"> is requesting %1$s blood</string>
    <string name="phone_no_hint">Phone number</string>
    <string name="blood_type_text">Blood Type</string>
    <string name="hospital_type_text">Type</string>
    <string name="doctor_type_text">Specialist</string>
    <string name="hospital_address_text">Address</string>
    <string name="doctor_address_text">Doctor Address</string>
    <string name="forgot_password_enter_address">Enter email address</string>
    <string name="send_email_password_reset_text">Send email</string>
    <string name="distance_text">Distance</string>
    <string name="gender_text">Gender</string>
    <string name="city_hint">city</string>
    <string name="search_blood_group_hint">Blood Group?</string>
    <string name="search_location_map">&#032;&#032;&#032;Search Location</string>
    <string name="sign_in_title">Sign In</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="sign_up_title">SIGN UP</string>
    <string name="log_out_message">Logout successfully</string>
    <string name="forgot_password_text">Forgot your password ?</string>
    <string name="already_log_out_message">User is already logout</string>

    <string name="pulmonologist_toast_text">Chest Specialist</string>
    <string name="spinal_surgeon_toast_text">Spinal Disorders</string>
    <string name="orthopedic_surgeon_toast_text">Specialist of skeleton bones and muscles</string>
    <string name="hematologist_toast_text"> Specialist to all blood related disease</string>
    <string name="neurophysician_toast_text">Specialist of brain and spinal cord</string>
    <string name="neurosurgeon_toast_text">Specialist of brain and spinal cord surgery</string>
    <string name="nephrologists_toast_text">Specialist of Kidneys</string>
    <string name="nutritionist_toast_text">Specialist of Diet and Health</string>
    <string name="anesthesiologist_toast_text">Specialist of Blood Pressure, Oxygen in Blood and heart rhythm</string>
    <string name="cardiac_surgeon_toast_text">Specialized in surgical procedures of heart</string>
    <string name="cardiac_electro_physiologist_toast_text">Diagnose heartbeats and rhythm</string>
    <string name="general_surgeon_toast_text">Provides surgical care of all body</string>
    <string name="general_physician_toast_text">Provides non-surgical health care</string>
    <string name="cardiologist_toast_text">Specialized in heart related diseases</string>
    <string name="general_vascular_laparoscopic_surgeon_toast_text">Specialized in Blood arteries and Veins</string>
    <string name="dental_surgeon_toast_text">Specialized Dentist</string>
    <string name="physician_gastroenterologist_toast_text">Specialized in digestive systems</string>
    <string name="radiologist_toast_text">Expert of X-Rays</string>
    <string name="rheumatologist_toast_text">Specialized in muscles and back pain</string>
    <string name="interventional_toast_text">Specialized in structural heart diseases</string>
    <string name="pathologist_toast_text">Specialized to find the causes to death and illness</string>
    <string name="physiotherapist_toast_text">Specialized to treat by massage, heat and exercise</string>
    <string name="dermatologist_toast_text">Specialized in skin</string>
    <string name="plastic_surgeon_toast_text">Specialized to reduce disfigurement</string>
    <string name="interventional_neuroradiologist_toast_text">Specialized to find out diseases of head, neck and spine through medical images</string>
    <string name="cosmetologist_toast_text">Specialized to treat hair, skin and nails</string>
    <string name="histopathologist_toast_text">Diagnose disease on body tissues</string>
    <string name="trauma_orthopedic_surgeon_toast_text">Specialized in reducing disorder and injuries in skeleton system</string>
    <string name="endocrinologist_toast_text">Specialized how body changes food in energy</string>
    <string name="urologist_toast_text">Specialized in Urinary disorders</string>
    <string name="ent_surgeon_toast_text">Specialized in diagnosing disorders in neck, head, nose, ears</string>
    <string name="gynecologist_toast_text">Specialized in gynecology</string>

    <string name="SignInFragmentTag">SignInFragment</string>
    <string name="SignUpFragmentTag">SignUpFragment</string>
    <string name="UserMapFragmentTag">UserMapFragment</string>
    <string name="DonorListFragmentTag">DonorListFragment</string>
    <string name="CustomDialogBoxFragmentTag">CustomDialogBoxFragment</string>
    <string name="HospitalDialogBoxFragmentTag">HospitalDialogBoxFragment</string>
    <string name="DoctorDetailsViewFragmentTag">DoctorDetailsViewFragment</string>
    <string name="HistoryFragmentTag">HistoryFragment</string>
    <string name="HelpFragmentTag">HelpFragment</string>
    <string name="ForgotPasswordFragmentTag">ForgotPasswordFragment</string>
    <string name="PendingRequestFragmentTag">PendingRequestFragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_facebook_auth">Facebook Login</string>

    <string name="server_client_id">215339572570-c99d91b9rpbt3vncohkijifbek340akn.apps.googleusercontent.com</string>
</resources>
