<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_item_profile" />

        <item
            android:id="@+id/nav_history"
            android:title="@string/menu_item_history" />

        <item
            android:id="@+id/nav_blood_donors"
            android:title="@string/menu_item_blood_donors" />

        <item
            android:id="@+id/nav_hospitals"
            android:title="@string/menu_item_hospitals" />

        <item
            android:id="@+id/nav_doctors"
            android:title="@string/menu_item_doctors" />

        <item
            android:id="@+id/nav_switch"
            android:title="Donate Blood ?"
            app:actionLayout="@layout/action_view_switch" />

        <item
            android:id="@+id/nav_help"
            android:title="@string/menu_item_help" />

        <item
            android:id="@+id/nav_log_out"
            android:title="@string/menu_item_log_out" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
