<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80979797">

    <TextView
        android:id="@+id/custom_dialog_cancel_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#C64249"
        android:layout_alignParentEnd="true"
        android:text="@string/cancel_text"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="60dp">

        <RelativeLayout
            android:id="@+id/custom_dialog_detail_container"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:background="@mipmap/nearby_donor_card">

            <ImageView
                android:id="@+id/custom_dialog_donor_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:src="@mipmap/round_placeholder"/>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/custom_dialog_donor_img">

                <TextView
                    android:id="@+id/custom_dialog_donor_name"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    android:text="@string/name_hint"/>

                <TextView
                    android:id="@+id/custom_dialog_donor_blood_type"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    android:text="@string/blood_type_text"/>

                <TextView
                    android:id="@+id/custom_dialog_donor_distance"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    android:text="@string/distance_text"/>

            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/call_message_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/custom_dialog_call"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:textColor="#88000000"
                android:textSize="18sp"
                android:background="@drawable/white_border"
                android:text="@string/call_text"/>

            <Button
                android:id="@+id/custom_dialog_message"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_toRightOf="@+id/custom_dialog_call"
                android:textColor="#88000000"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                android:background="@drawable/white_border"
                android:text="@string/message_text"/>

        </RelativeLayout>

    </RelativeLayout>



</RelativeLayout>