<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal">

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@mipmap/nearby_donor_card"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp">


        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/list_donor_image_view"
            android:layout_marginStart="40dp"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pending_req_donor_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/name_hint"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_marginEnd="35dp"
            android:layout_alignParentEnd="true">

            <Button
                android:id="@+id/pending_req_donor_yes_btn"
                android:layout_width="75dp"
                android:layout_height="35dp"
                android:text="@string/yes_text"
                android:textColor="#ffffff"
                android:background="#4043A047"/>

            <!--enable: 1B5E20-->
            <!--disable: 9943A047-->

            <Button
                android:id="@+id/pending_req_donor_no_btn"
                android:layout_width="75dp"
                android:layout_height="35dp"
                android:text="@string/no_text"
                android:textColor="#ffffff"
                android:layout_marginStart="5dp"
                android:background="#40E53935"
                android:layout_toRightOf="@+id/pending_req_donor_yes_btn" />

            <!--B71C1C-->
            <!--50E53935-->

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>